<resources>
	<string name="cancel">Cancel</string>
	<string name="no">NO</string>
	<string name="yes">YES</string>
	<string name="ask_scanner">Directories selected. Run File Scanner?</string>
	<string name="depth">Depth: %d</string>
	<string name="default_dir" translatable="false">/sdcard</string>
	<string name="label_parent_directory">Parent Directory</string>
	<string name="label_root_directory">Root Directory</string>
	<string name="local_storage">Local Storage</string>
	<string name="label_parent_dir" translatable="false">...</string>
	<string name="fp_warn_delete">Are you sure to delete selected %d files?(can\'t undo)</string>
	<string name="fp_warn_move">Are you sure to move selected %1$d files to %2$s?(can\'t undo)</string>
	<string name="fp_warn_copy">Are you sure to copy selected %1$d files to %2$s?(can\'t undo)</string>
	<string name="fp_warn_lock">System unlocked, please lock the file picker system to proceed\.</string>
	<string name="fp_lock">Selector Locked Again.</string>
	<string name="fp_unlock">Selector Unlocked!</string>

	<string name="fp_cf">Create A File</string>
	<string name="fp_cff">Create A Folder</string>
	<string name="asset">Asset File</string>
	<string name="appname">File Picker</string>
	<string name="regex">regex</string>
	<string name="view">View</string>
	<string name="settings">Settings</string>

	<string name="copy_to">Copy to</string>
	<string name="move_to">Move to</string>
	<string name="playlist">Playlist</string>
	<string name="open">Open</string>
	<string name="sortby">Sort by</string>
	<string name="show">Show</string>
	<string name="thumbnail">Thumbnail</string>
	<string name="about">About</string>
	<string name="rename">Rename</string>
	<string name="refresh">Refresh</string>
	<string name="lock">Lock</string>
	<string name="name">Name</string>
	<string name="last_modified">Last modified</string>
	<string name="size">Size</string>
	<string name="large">Large</string>
	<string name="small">Small</string>
	<string name="medium">Medium</string>
	<string name="delete">Delete</string>
	<string name="share">Share</string>
	<string name="select_all">Select all</string>
	<string name="select_all1">@string/select_all</string>
	<string name="grid">Grid</string>
	<string name="list">List</string>
	<string name="file_type">File type</string>
	<string name="slideshow">Slideshow</string>
	<string name="exit">Exit</string>
	<string name="fp_select">Select</string>
	<string name="favorite">Favorite</string>
	<string name="enabled">Enable</string>
	<string name="go_to">Go to</string>
	<string name="property">Properties</string>
	<string name="property_f">Folder Properties</string>
	<string name="init_favorite">Initialize Favorites</string>
	<string name="send_dot">Share…</string>
	<string name="share_dot">Send…</string>
	<string name="move_to_folder">Move to</string>
	<string name="copy_to_folder">Copy to</string>
	<string name="break_selection">Pause Selection</string>
	<string name="detailed_list">Detailed List</string>
	<string name="custom_columns_number">Customise column number: </string>
	<string name="_1column">one column</string>
	<string name="_2column">two column</string>
	<string name="_3column">three column</string>
	<string name="crop">Crop</string>
	<string name="cancel_selection">Cancel selection</string>
	<string name="invert_selection">Invert selection</string>
	<string name="close">Close</string>
	<string name="confirm">Confirm</string>
	<string name="continue_">Continue</string>
	<string name="noseletion">Nothing Selected</string>
	<string name="pls_pick_sdcard">请选择目标sd卡路径</string>
</resources>