<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sorting_dialog_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sorting_dialog_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <com.knziha.filepicker.widget.TextViewSplitter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid"
            android:gravity="center"
            android:textColor="#a0000000"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/viewmode1"
                android:text="@string/_1column"
                android:drawableTop="@drawable/ic_view_comfy_1_black_24dp"
                style="@style/GridMode_l"
                android:drawableTint="#666666"
                android:textColor="#000"
				android:onClick="onComfyClick"
                />
            <TextView
                android:id="@+id/viewmode2"
                android:text="@string/_2column"
                android:drawableTop="@drawable/ic_view_comfy_2_black_24dp"
                style="@style/GridMode_l"
                android:drawableTint="#666666"
                android:textColor="#000"
				android:onClick="onComfyClick"
                />
            <TextView
                android:id="@+id/viewmode3"
                android:text="@string/_3column"
                android:drawableTop="@drawable/ic_view_comfy_black_24dp"
                style="@style/GridMode_l"
                android:drawableTint="#666666"
                android:textColor="#000"
				android:onClick="onComfyClick"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberpickerp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/numberpickerh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/custom_columns_number"
                android:layout_marginLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#000"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <com.knziha.filepicker.widget.HorizontalNumberPicker
                android:id="@+id/numberpicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                style="@style/NumberKicker_l"
                />
        </LinearLayout>

        <com.knziha.filepicker.widget.TextViewSplitter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thumbnail"
            android:gravity="center"
            android:textColor="#a0000000"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/enable_list"
                android:text="@string/detailed_list"
                style="@style/CheckBox"
                android:textColor="#000"
                />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/auto_height"
                android:text="适应高度"
                style="@style/CheckBox"
                android:textColor="#000"
                android:visibility="gone"
                />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/crop_thumbs"
                android:text="@string/crop"
                style="@style/CheckBox"
                android:textColor="#000"
                />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/enable_thumbs"
                android:text="@string/show"
                style="@style/CheckBox"
                android:textColor="#000"
                />
        </LinearLayout>

        <com.knziha.filepicker.widget.TextViewSplitter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sortby"
            android:gravity="center"
            android:textColor="#a0000000"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/file_type"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/size"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/last_modified"
                android:textColor="#000"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/viewmode4"
                android:src="@drawable/ic_sort_asc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
            <ImageView
                android:id="@+id/viewmode6"
                android:src="@drawable/ic_sort_path_asc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
            <ImageView
                android:id="@+id/viewmode8"
                android:src="@drawable/ic_sort_size_asc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
            <ImageView
                android:id="@+id/viewmode10"
                android:src="@drawable/ic_sort_time_asc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/viewmode5"
                android:src="@drawable/ic_sort_desc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
            <ImageView
                android:id="@+id/viewmode7"
                android:src="@drawable/ic_sort_path_desc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
            <ImageView
                android:id="@+id/viewmode9"
                android:src="@drawable/ic_sort_size_desc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
            <ImageView
                android:id="@+id/viewmode11"
                android:src="@drawable/ic_sort_time_desc"
                style="@style/SortMode_l"
                android:tint="#666666"
				android:onClick="onComfyClick"
                />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
